@@ -1,10 +1,12 @@
 package faang.school.notificationservice.service;
 
 import com.vonage.client.VonageClient;
+import com.vonage.client.VonageClientException;
 import com.vonage.client.sms.MessageStatus;
 import com.vonage.client.sms.SmsClient;
 import com.vonage.client.sms.SmsSubmissionResponse;
 import com.vonage.client.sms.SmsSubmissionResponseMessage;
+import com.vonage.client.sms.messages.TextMessage;
 import faang.school.notificationservice.dto.UserDto;
 import faang.school.notificationservice.exception.SmsIntegrationException;
 import org.junit.jupiter.api.BeforeEach;
@@ -15,13 +17,13 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -42,92 +44,76 @@ public class SmsServiceTest {
     @InjectMocks
     private SmsService smsService;
 
-    private UserDto userDto;
-    private String message;
+    private UserDto validUser;
+    private final String validMessage = "Test message";
 
     @BeforeEach
     void setUp() {
-        userDto = UserDto.builder()
+        validUser = UserDto.builder()
+                .phone("+1234567890")
                 .preference(UserDto.PreferredContact.PHONE)
-                .phone("1234567")
                 .build();
-
-        message = "Send SMS";
     }
 
     @Test
-    void testSendSuccess() {
-        when(smsClient.submitMessage(any())).thenReturn(response);
+    void sendShouldSuccessWhenValidInput() {
         when(vonageClient.getSmsClient()).thenReturn(smsClient);
-        when(response.getMessages()).thenReturn(Collections.singletonList(responseMessage));
+        when(smsClient.submitMessage(any(TextMessage.class))).thenReturn(response);
+        when(response.getMessages()).thenReturn(List.of(responseMessage));
         when(responseMessage.getStatus()).thenReturn(MessageStatus.OK);
 
-        smsService.send(userDto, message);
-        verify(vonageClient, times(1)).getSmsClient();
+        assertDoesNotThrow(() -> smsService.send(validUser, validMessage));
+
+        verify(smsClient).submitMessage(any(TextMessage.class));
     }
 
     @Test
-    void testSendFailure() {
-        when(smsClient.submitMessage(any())).thenReturn(response);
+    void sendShouldThrowWhenVonageClientError() {
         when(vonageClient.getSmsClient()).thenReturn(smsClient);
-        when(response.getMessages()).thenReturn(Collections.singletonList(responseMessage));
+        when(smsClient.submitMessage(any(TextMessage.class)))
+                .thenThrow(new VonageClientException("API failure"));
+
+        SmsIntegrationException exception = assertThrows(
+                SmsIntegrationException.class,
+                () -> smsService.send(validUser, validMessage)
+        );
+
+        assertThat(exception.getMessage()).contains("API failure");
+    }
+
+    @Test
+    void sendShouldThrowWhenEmptyResponseMessages() {
+        when(vonageClient.getSmsClient()).thenReturn(smsClient);
+        when(smsClient.submitMessage(any(TextMessage.class))).thenReturn(response);
+        when(response.getMessages()).thenReturn(Collections.emptyList());
+
+        SmsIntegrationException exception = assertThrows(
+                SmsIntegrationException.class,
+                () -> smsService.send(validUser, validMessage)
+        );
+
+        assertThat(exception.getMessage()).contains("Empty response");
+    }
+
+    @Test
+    void sendShouldThrowWhenNonOkStatus() {
+        when(vonageClient.getSmsClient()).thenReturn(smsClient);
+        when(smsClient.submitMessage(any(TextMessage.class))).thenReturn(response);
+        when(response.getMessages()).thenReturn(List.of(responseMessage));
         when(responseMessage.getStatus()).thenReturn(MessageStatus.INTERNAL_ERROR);
-        when(responseMessage.getErrorText()).thenReturn("Error sending SMS");
+        when(responseMessage.getErrorText()).thenReturn("Invalid number");
 
-        SmsIntegrationException exception = assertThrows(SmsIntegrationException.class,
-                () -> smsService.send(userDto, message));
+        SmsIntegrationException exception = assertThrows(
+                SmsIntegrationException.class,
+                () -> smsService.send(validUser, validMessage)
+        );
 
-        assertEquals("SMS error: Error sending SMS", exception.getMessage());
-        verify(smsClient, times(1)).submitMessage(any());
+        assertThat(exception.getMessage()).contains("Invalid number");
     }
 
     @Test
-    void testSend_WithoutPhoneNumber() {
-        userDto.setPhone(null);
-
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
-                () -> smsService.send(userDto, message));
-
-        assertEquals("To send SMS, a phone number is a mandatory requirement", exception.getMessage());
-    }
-
-    @Test
-    void testSend_WithEmptyPhoneNumber() {
-        userDto.setPhone("");
-
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
-                () -> smsService.send(userDto, message));
-
-        assertEquals("To send SMS, a phone number is a mandatory requirement", exception.getMessage());
-        verifyNoInteractions(vonageClient);
-    }
-
-    @Test
-    void testSend_WithEmptyResponse() {
-        when(vonageClient.getSmsClient()).thenReturn(smsClient);
-        when(smsClient.submitMessage(any())).thenReturn(null);
-
-        SmsIntegrationException exception = assertThrows(SmsIntegrationException.class,
-                () -> smsService.send(userDto, message));
-
-        assertEquals("Incorrect response from Vonage", exception.getMessage());
-        verify(smsClient, times(1)).submitMessage(any());
-    }
-
-    @Test
-    void testSend_WithExceptionFromClient() {
-        when(vonageClient.getSmsClient()).thenReturn(smsClient);
-        when(smsClient.submitMessage(any())).thenThrow(new RuntimeException("Client error"));
-
-        SmsIntegrationException exception = assertThrows(SmsIntegrationException.class,
-                () -> smsService.send(userDto, message));
-
-        assertEquals("Error sending SMS", exception.getMessage());
-        verify(smsClient, times(1)).submitMessage(any());
-    }
-
-    @Test
-    void testGetPreferredContact() {
-        assertEquals(UserDto.PreferredContact.PHONE, smsService.getPreferredContact());
+    void getPreferredContactShouldReturnPhone() {
+        assertThat(smsService.getPreferredContact())
+                .isEqualTo(UserDto.PreferredContact.PHONE);
     }
 }
